--- a/PYTHON/PP-python-sql2.ipynb
+++ b/PYTHON/PP-python-sql2.ipynb
@@ -33,14 +33,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MySQLCursor: CREATE DATABASE mi_primerita_BBDD_Python\n"
+      "1007 (HY000): Can't create database 'mi_primerita_bbdd_python'; database exists\n",
+      "Error Code: 1007\n",
+      "SQLSTATE HY000\n",
+      "Message Can't create database 'mi_primerita_bbdd_python'; database exists\n"
      ]
     }
    ],
@@ -65,59 +68,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#creamos funcion para la creación de tablas y la conexión al servidor:\n",
+    "\n",
+    "def conexion (contraseña, query):\n",
+    "\n",
+    "    cnx = mysql.connector.connect(user='root', password= contraseña,\n",
+    "                              host='127.0.0.1', database='mi_primerita_BBDD_Python')\n",
+    "    mycursor = cnx.cursor()\n",
+    "\n",
+    "    try:\n",
+    "        mycursor.execute(query)\n",
+    "        print(mycursor)\n",
+    "\n",
+    "    except mysql.connector.Error as err:\n",
+    "        print(err)\n",
+    "        print(\"Error Code:\", err.errno)\n",
+    "        print(\"SQLSTATE\", err.sqlstate)\n",
+    "        print(\"Message\", err.msg)\n",
+    "    else:\n",
+    "        cnx.close()\n",
+    "\n",
+    "    print (\"la tabla ha sido creada\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#definimos queries y contraseña para juntar la información que utilizaremos para llamar a la función:\n",
+    "\n",
+    "contraseña = \"AlumnaAdalab\"\n",
+    "\n",
+    "query_zapatillas = \"\"\"CREATE TABLE Zapatillas (\n",
+    "                        idZapatillas INT NOT NULL AUTO_INCREMENT, modelo VARCHAR(45) NOT NULL, color VARCHAR(45) NOT NULL, talla INT NOT NULL, \n",
+    "                        PRIMARY KEY(idZapatillas));\"\"\"\n",
+    "    \n",
+    "query_clientes = \"\"\"CREATE TABLE Clientes (\n",
+    "                        idClientes INT AUTO_INCREMENT NOT NULL, nombre VARCHAR(45) NOT NULL, numero_telefono INT(9) NOT NULL, \n",
+    "                        email VARCHAR(45) NOT NULL, direccion VARCHAR(45) NOT NULL, provincia VARCHAR(45) NOT NULL, \n",
+    "                        pais VARCHAR(45) NOT NULL, codigo_postal INT(9) NOT NULL, PRIMARY KEY (idClientes));\"\"\"\n",
+    "    \n",
+    "query_empleados = \"\"\"CREATE TABLE Empleados (\n",
+    "                        idEmpleado INT AUTO_INCREMENT NOT NULL, nombre VARCHAR(45) NOT NULL, tienda VARCHAR(45) NOT NULL,\n",
+    "                        salario FLOAT NULL, fecha_incorporacion DATE NOT NULL, PRIMARY KEY (idEmpleado));\"\"\"\n",
+    "    \n",
+    "query_facturas = \"\"\" CREATE TABLE Facturas (\n",
+    "                        idFactura INT NOT NULL AUTO_INCREMENT, idEmpleado INT NOT NULL, idClientes INT NOT NULL, idZapatillas INT NOT NULL,\n",
+    "                        fecha DATE NOT NULL, total FLOAT NOT NULL, \n",
+    "                        PRIMARY KEY (idFactura), \n",
+    "                        CONSTRAINT fk_Facturas_Zapatillas FOREIGN KEY (idZapatillas) REFERENCES Zapatillas (idZapatillas),\n",
+    "                        CONSTRAINT fk_Facturas_Clientes FOREIGN KEY (idClientes) REFERENCES Clientes (idClientes),\n",
+    "                        CONSTRAINT fk_Facturas_Empleados FOREIGN KEY (idEmpleado) REFERENCES empleados (idEmpleado) );\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax. Perhaps you forgot a comma? (1939452032.py, line 11)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn [5], line 11\u001b[1;36m\u001b[0m\n\u001b[1;33m    valores = {zapatillas: idZapatillas (PRIMARY KEY INT AUTO_INCREMENT NOT NULL), modelo (VARCHAR(45) NOT NULL), color (VARCHAR(45) NOT NULL), talla (INT NOT NULL),\u001b[0m\n\u001b[1;37m                                         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MySQLCursor: CREATE TABLE Zapatillas (\n",
+      "              ..\n",
+      "la tabla ha sido creada\n"
      ]
     }
    ],
    "source": [
-    "#creamos funcion para la creación de tablas y la conexión al servidor\n",
+    "#llamamos a la función para crear la tabla zapatillas:\n",
     "\n",
-    "def conexion (contraseña, query):\n",
+    "conexion(contraseña, query_zapatillas)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MySQLCursor: CREATE TABLE Clientes (idClientes INT AU..\n",
+      "la tabla ha sido creada\n"
+     ]
+    }
+   ],
+   "source": [
+    "#llamamos a la función para crear la tabla clientes:\n",
     "\n",
-    "    cnx = mysql.connector.connect(user='root', password= {\"contraseña\"},\n",
-    "                              host='127.0.0.1', database='mi_primerita_BBDD_Python')\n",
+    "conexion(contraseña, query_clientes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MySQLCursor: CREATE TABLE Empleados (idEmpleado INT A..\n",
+      "la tabla ha sido creada\n"
+     ]
+    }
+   ],
+   "source": [
+    "#llamamos a la función para crear la tabla empleados:\n",
     "\n",
-    "\n",
-    "mycursor = cnx.cursor()\n",
-    "\n",
-    "query_zapatillas = \"(CREATE TABLE Zapatillas (idZapatillas PRIMARY KEY INT AUTO_INCREMENT NOT NULL, modelo VARCHAR(45) NOT NULL, color VARCHAR(45) NOT NULL, talla INT NOT NULL));\"\n",
-    "query_clientes = \"\"\"(CREATE TABLE Clientes (idClientes PRIMARY KEY INT AUTO_INCREMENT NOT NULL, nombre VARCHAR(45) NOT NULL, numero_telefono INT(9) NOT NULL, email VARCHAR(45) NOT NULL,\n",
-    "direccion VARCHAR(45) NOT NULL, provincia VARCHAR(45) NOT NULL, pais VARCHAR(45) NOT NULL, codigo_postal INT(9) NOT NULL));\"\"\"\n",
-    "query_empleados = \"\"\"(CREATE TABLE Empleados (idEmpleado PRIMARY KEY INT AUTO_INCREMENT NOT NULL, nombre VARCHAR(45) NOT NULL, tienda VARCHAR(45) NOT NULL, salario FLOAT NULL, fecha_incorporacion DATE NOT NULL));\"\"\"\n",
-    "query_facturas = \"\"\"(CREATE TABLE Facturas (idFactura PRIMARY KEY INT AUTO_INCREMENT NOT NULL, idEmpleados INT, NOT NULL, CONSTRAINT fk_facturas_empleados FOREIGN KEY(idEmpleados) \n",
-    "REFERENCE empleados (idEmpleados) ON DELETE cascade ON UPDATE cascade, idCliente INT, NOT NULL, CONSTRAINT fk_facturas_cilientes FOREIGN KEY(idClientes) \n",
-    "REFERENCE clientes (idClientes) ON DELETE cascade ON UPDATE cascade, idZapatillas INT, NOT NULL, CONSTRAINT fk_facturas_zapatillas FOREIGN KEY(idZapatillas) \n",
-    "REFERENCE zapatillas (idZapatillas) ON DELETE cascade ON UPDATE cascade,fecha DATE NOT NULL, total FLOAT NOT NULL));\"\"\"\n",
-    "\n",
-    "try:\n",
-    "\n",
-    "    if \"query\" == query_zapatillas:\n",
-    "\n",
-    "    mycursor.execute (query_zapatillas)\n",
-    "\n",
-    "contador_indice = 0\n",
-    "for nombre_tabla in valores:\n",
-    "    nombre_tabla = valores.keys([contador_indice])\n",
-    "    valores_datos = valores.values([contador_indice])\n",
-    "    contador_indice += 1\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "    print(mycursor)\n",
-    "except mysql.connector.Error as err:\n",
-    "    print(err)\n",
-    "    print(\"Error Code:\", err.errno)\n",
-    "    print(\"SQLSTATE\", err.sqlstate)\n",
-    "    print(\"Message\", err.msg)\n"
+    "conexion(contraseña, query_empleados)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1050 (42S01): Table 'facturas' already exists\n",
+      "Error Code: 1050\n",
+      "SQLSTATE 42S01\n",
+      "Message Table 'facturas' already exists\n",
+      "la tabla ha sido creada\n"
+     ]
+    }
+   ],
+   "source": [
+    "#llamamos a la función para crear la tabla facturas:\n",
+    "conexion(contraseña, query_facturas)"
    ]
   }
  ],
